--- a/.env
+++ b/.env
@@ -2,3 +2,11 @@ DB_NAME='Twitter_dev'
 DB_USERNAME='phamvantu'
 DB_PASSWORD='vantu090303'
 DB_USERS_COLLECTION='User'
+DB_REFESH_TOKENS_COLLECTION='refresh_token'
+PASSWORD_SECRET='@PHAMVANTU'
+JWT_SECRET='12344321!@#' 
+# Nếu expireIn là số thì nó sẽ tính theo giây
+# Nếu expireIn la string thi phải quy định them cac ký tự như 'm', 'h', 'd', 'w'
+# string mà không quy định thì nó sẽ tính theo milisecond
+REFRSH_TOKEN_EXPIRES_IN='100d'
+ACCESS_TOKEN_EXPIRES_IN='15m'
