code update chương 12

--- a/.env
+++ b/.env
@@ -3,10 +3,16 @@ DB_USERNAME='phamvantu'
 DB_PASSWORD='vantu090303'
 DB_USERS_COLLECTION='User'
 DB_REFESH_TOKENS_COLLECTION='refresh_token'
+DB_FOLLOWERS_CQLLECTION='followers'
 PASSWORD_SECRET='@PHAMVANTU'
-JWT_SECRET='12344321!@#' 
+JWT_SECRET_ACCESS_TOKEN='12344321!@#' 
+JWT_SECRET_REFRESH_TOKEN='1234432121333!@#' 
+JWT_SECRET_EMAIL_VERIFY_TOKEN='1234436654621!@#'
+JWT_SECRET_FORGOT_PASSWORD_TOKEN='A12344321!@#'
 # Nếu expireIn là số thì nó sẽ tính theo giây
 # Nếu expireIn la string thi phải quy định them cac ký tự như 'm', 'h', 'd', 'w'
 # string mà không quy định thì nó sẽ tính theo milisecond
 REFRSH_TOKEN_EXPIRES_IN='100d'
-ACCESS_TOKEN_EXPIRES_IN='1m'
+ACCESS_TOKEN_EXPIRES_IN='15m'
+EAMIL_VERIFY_TOKEN_EXPIRES_IN='7d'
+FORGOT_PASSWORD_TOKEN_EXPIRES_IN='7d'
